--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,62 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style-type: none;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+img {
+  display: block;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.form {
+  display: flex;
+  justify-content: center;
+}
+
+.form-input {
+  margin-bottom: 20px;
+}
+.form-btn {
+}
+.gallery-list {
+  width: 1128px;
+  padding-left: 156px;
+  padding-right: 156px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  margin: auto;
+}
+.gallery-item {
+  width: calc((100% - 48px) / 3);
+}
+.image-item {
+}
+.wrap {
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  gap: 32px;
+}
+.image-wrap-description {
+  display: flex;
+}
+.image-title {
+  margin: 4px 0px 10px 0px;
+}
+.image-description {
+  text-align: center;
 }
